--- a/src/ui/pages/layouts/MainLayout.css
+++ b/src/ui/pages/layouts/MainLayout.css
@@ -7,7 +7,7 @@ div[class$='-SkeletonTheme'] {
   box-sizing: border-box;
   display: grid;
   grid-template-rows: 1fr auto;
-  max-height: 100vh;
+  height: 100vh;
 }
 
 .layout > .ui {
